syntax = "proto3";

option java_package = "com.voyachek.pharmacy.grpclib.user";

import "user/messages/user_role.enum.proto";

/** Запрос на создание пользователя */
message UserCreateRequest {
  /** Имя пользователя */
  string name = 1;
  /** Email пользователя */
  string email = 2;
  /** Роль пользователя в системе */
  UserRole role = 3;
}

/** Результат создания пользователя */
message UserCreateResponse {
  /** ID пользователя */
  string id = 1;
}